syntax = "proto3";
package stride.icaoracle;

import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v11/x/icaoracle/types";

// Toggle's whether an oracle is active and should receive metric updates
message ToggleOracleProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string deposit = 3 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];

  string oracle_chain_id = 4;
  bool active = 5;
}

// Removes an oracle completely
message RemoveOracleProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string deposit = 3 [ (gogoproto.moretags) = "yaml:\"deposit\"" ];

  string oracle_chain_id = 4;
}
